--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <description>demo</description>
     <properties>
         <java.version>17</java.version>
+        <spring-boot.version>2.5.4</spring-boot.version>
     </properties>
     <dependencies>
         <dependency>
@@ -63,11 +64,18 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>3.1.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.heroku</groupId>
-            <artifactId>webapp-runner</artifactId>
-            <version>9.0.72.2</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.heroku</groupId>-->
+<!--            <artifactId>webapp-runner</artifactId>-->
+<!--            <version>9.0.72.2</version>-->
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.apache.tomcat.embed</groupId>-->
+<!--                    <artifactId>tomcat-embed-core</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
+<!--        </dependency>-->
+
 
 
         <dependency>
@@ -97,11 +105,7 @@
             <version>3.1.0</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat</groupId>
-            <artifactId>tomcat-jasper</artifactId>
-            <version>11.0.0-M4</version>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jdbc</artifactId>
